Update Oneal
Oneal chạy lúc nhanh lúc chậm và biết đuổi theo Bomber