@@ -1,4 +1,4 @@
-package uet.oop.bomberman.graphics;
+/*package uet.oop.bomberman.graphics;  //Link may Than Hong Thai
 
 public class Sound {
     public static String background = "C:\\Users\\ASUS\\Documents\\GitHub\\Bomberman-Game\\res\\sounds\\background.WAV";
@@ -7,4 +7,15 @@ public class Sound {
     public static String dead_fx = "C:\\Users\\ASUS\\Documents\\GitHub\\Bomberman-Game\\res\\sounds\\lose.WAV";
     public static String new_fx = "C:\\Users\\ASUS\\Documents\\GitHub\\Bomberman-Game\\res\\sounds\\newLife.WAV";
     public static String exp = "C:\\Users\\ASUS\\Documents\\GitHub\\Bomberman-Game\\res\\sounds\\explosion.WAV";
+}*/
+
+package uet.oop.bomberman.graphics;  //Link may Tran Dinh Nam
+
+public class Sound {  //--module-path F:\JavaFX\javafx-sdk-11.0.2\lib --add-modules javafx.controls,javafx.fxml
+    public static String background = "F:\\GitHub\\Bomberman-Game\\res\\sounds\\background.WAV"; // F:\
+    public static String nextLevel = "F:\\GitHub\\Bomberman-Game\\res\\sounds\\nextLevel.WAV";
+    public static String power_fx = "F:\\GitHub\\Bomberman-Game\\res\\sounds\\item.WAV";
+    public static String dead_fx = "F:\\GitHub\\Bomberman-Game\\res\\sounds\\lose.WAV";
+    public static String new_fx = "F:\\GitHub\\Bomberman-Game\\res\\sounds\\newLife.WAV";
+    public static String exp = "F:\\GitHub\\Bomberman-Game\\res\\sounds\\explosion.WAV";
 }
